--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,25 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-<body class="mat-typography">
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+
+  <!-- <script src="./assets/chart.min.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
+<!-- <script src="./assets/chartjs-plugin-zoom.min.js"></script> -->
+
+<style>
+  p {
+    font-weight: 400;
+    font-size: 1rem;
+    letter-spacing: 0.03125rem;
+    text-transform: none;
+    line-height: 1.75rem;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+  }
+  
+</style>
+<body class="mat-typography igx-typography">
   <app-root></app-root>
 </body>
 </html>
